--- a/about_us.html
+++ b/about_us.html
@@ -35,6 +35,8 @@
 			<h2>Michael Lyall</h2>
 				<ul>
 					<li>Meta site introduction page mockup</li>
+					<li>Meta site layouts</li>
+					<li>Rationale layout</li>
 				</ul>
 			<h2>Tom Machin</h2>
 				<ul>
